@@ -218,14 +218,14 @@ p.wiki_toc_title {
 	position: absolute;
 	width: 99%;
 	height: 100%;
-	text-align: center;
 	padding-top: 25%;
 	z-index: 100;
 	background-color: white;
-	font-size: large;
 	left: 0em;
 	top: 0em;
 	cursor: wait;
+	font-size: large;
+	text-align: center;
 }
 
 div.menu_area ul li, div.menu_area ol li,
@@ -308,6 +308,13 @@ div.ns_menu_area ul li, div.ns_menu_area ol li {
 	margin-top: 0.063em;
 	margin-bottom: 0.063em;
 }
+
+/* since v0.10.5 */
+
+.woas_wait_text {
+	color: navy;
+}
+
 </style><title>Main Page</title>
 <script src="src/aes.js" type="text/javascript"></script>
 <script src="src/framework.js" type="text/javascript"></script>
@@ -324,7 +331,7 @@ div.ns_menu_area ul li, div.ns_menu_area ol li {
 <script src="src/wsif.js" type="text/javascript"></script>
 <script src="src/editor.js" type="text/javascript"></script>
 <script src="src/ui.js" type="text/javascript"></script></head><body class="bg" id="body" style="cursor: auto;" onload="woas.after_load()" onunload="woas.before_quit()">
-<div id="loading_overlay" style="display: inline; visibility: visible;"><noscript><h1>If you are seeing this text, your browser is not javascript-enabled (or maybe it is loading really slow)</h1></noscript>Loading...</div>
+<div id="loading_overlay" style="display: inline; visibility: visible;"><noscript><h1>If you are seeing this text, your browser is not javascript-enabled (or maybe it is loading really slow)</h1></noscript><div id="woas_wait_text">Loading...</div></div>
 <div style="display: none; visibility: hidden;" id="woas_pwd_mask">
 <div style="visibility: visible;" id="woas_pwd_query">
 <form id="stealthpwd" action="" onsubmit="woas._password_ok(); return false">
